<resources>
    <string name="app_name">Hope Donation App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hope">Hope</string>
    <string name="change_lives_for_good">Change Lives for Good</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="sign_in_via_phone">Sign In via Phone</string>
    <string name="send_otp">Send OTP</string>
    <string name="validate">Validate</string>
    <string name="enter_opt_sent_to_phone">Enter Opt Sent to Phone</string>
    <string name="clothes">Clothes</string>
    <string name="food" />
    <string name="Books" />
    <string name="Meds" />
    <string name="for_you_verified_by_us">For You Verified by Us</string>
    <string name="jk_yog_charity">JK Yog Charity</string>
    <string name="please_enter_your_amount">Please enter your amount</string>
    <string name="story_thumbnail">Story Thumbnail</string>
    <string name="thankyou_so_much_for_your_kindness">Thankyou so much for your kindness</string>
    <string name="pay_securely">Pay Securely</string>
    <string name="thankyou">Thankyou</string>
    <string name="tod">TOD</string>
    <string-array name="country_codes">
        <item>+91</item>
        <item>+1</item>
        <item>+44</item>
        <item>+61</item>
        <item>+81</item>
    </string-array>
</resources>
