<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage.VerifiedCharityOrg">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="497sp"
        android:layout_height="359sp"
        android:layout_marginBottom="32sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/verified_background" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="239sp"
        android:fontFamily="cursive"
        android:text="@string/for_you_verified_by_us"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="409sp"
        android:layout_height="237sp"
        android:layout_marginStart="1sp"
        android:layout_marginTop="1sp"
        android:layout_marginEnd="1sp"
        android:layout_marginBottom="1sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.25">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/JK_yog"
                android:layout_width="160sp"
                android:layout_height="99sp"
                android:layout_marginBottom="8sp"
                android:contentDescription="@string/jk_yog_charity"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.09"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.068"
                app:srcCompat="@drawable/jk_yog_scroller" />

            <ImageButton
                android:id="@+id/everest"
                android:layout_width="160sp"
                android:layout_height="99sp"
                android:layout_marginBottom="8sp"
                android:contentDescription="@string/tod"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.719"
                app:layout_constraintStart_toEndOf="@+id/JK_yog"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.068"
                app:srcCompat="@drawable/team_everest" />

            <ImageButton
                android:id="@+id/CryOrg"
                android:layout_width="160sp"
                android:layout_height="99sp"
                android:layout_marginStart="16sp"
                android:layout_marginEnd="221sp"
                android:layout_marginBottom="8sp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.583"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/JK_yog"
                app:layout_constraintVertical_bias="0.025"
                app:srcCompat="@drawable/cry_org" />

            <ImageButton
                android:id="@+id/Smile"
                android:layout_width="160sp"
                android:layout_height="99sp"
                android:layout_marginStart="16sp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.64"
                app:layout_constraintStart_toEndOf="@+id/CryOrg"
                app:layout_constraintTop_toBottomOf="@+id/everest"
                app:layout_constraintVertical_bias="0.039"
                app:srcCompat="@drawable/smile_org" />

            <ImageButton
                android:id="@+id/giveOrg"
                android:layout_width="160sp"
                android:layout_height="99sp"
                android:layout_marginStart="21sp"
                android:layout_marginEnd="221sp"
                android:layout_marginBottom="8sp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.285"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CryOrg"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/give_india_charity_org" />

            <ImageButton
                android:id="@+id/hlepAgeindia"
                android:layout_width="160sp"
                android:layout_height="99sp"
                android:layout_marginBottom="8sp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.727"
                app:layout_constraintStart_toEndOf="@+id/giveOrg"
                app:layout_constraintTop_toBottomOf="@+id/Smile"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/help_aga_india" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>