<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomePage.HomeScreen">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/topStoriesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:scrollbars="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/clothes"
        android:layout_width="61dp"
        android:layout_height="60dp"
        android:background="@drawable/roundbutton"
        android:contentDescription="@string/clothes"
        android:padding="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.060000002" />

    <ImageButton
        android:id="@+id/Gaushala"
        android:layout_width="61dp"
        android:layout_height="60dp"
        android:background="@drawable/roundbutton"
        android:contentDescription="@string/clothes"
        android:padding="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/cow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.411" />

    <ImageButton
        android:id="@+id/blood"
        android:layout_width="61dp"
        android:layout_height="60dp"
        android:background="@drawable/roundbutton"
        android:contentDescription="@string/clothes"
        android:padding="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/blood_donation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.345"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.411" />

    <ImageButton
        android:id="@+id/food"
        android:layout_width="61dp"
        android:layout_height="60dp"
        android:contentDescription="@string/food"
        android:padding="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/img_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.346"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.060000002" />

    <ImageButton
        android:id="@+id/Meds"
        android:layout_width="61dp"
        android:layout_height="60dp"
        android:contentDescription="@string/Meds"
        android:padding="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/img_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.608"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.060000002" />

    <ImageButton
        android:id="@+id/Books"
        android:layout_width="61dp"
        android:layout_height="60dp"
        android:contentDescription="@string/Books"
        android:padding="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/img_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.871"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.060000002" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:padding="0dp"
        android:text="Welcome"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="57dp"
        android:layout_height="12dp"
        android:layout_marginEnd="4dp"
        android:text="Gaushala"
        android:textAlignment="center"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="@+id/Gaushala"
        app:layout_constraintStart_toStartOf="@+id/Gaushala"
        app:layout_constraintTop_toBottomOf="@+id/Gaushala" />

    <TextView
        android:id="@+id/textView223"
        android:layout_width="57dp"
        android:layout_height="12dp"
        android:text="Donate Blood"
        android:textAlignment="center"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="@+id/blood"
        app:layout_constraintStart_toStartOf="@+id/blood"
        app:layout_constraintTop_toBottomOf="@+id/blood" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="57dp"
        android:layout_height="12dp"
        android:text="Donate Organ"
        android:textAlignment="center"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="@+id/organ"
        app:layout_constraintStart_toStartOf="@+id/organ"
        app:layout_constraintTop_toBottomOf="@+id/organ" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="57dp"
        android:layout_height="12dp"
        android:text="Donate to God"
        android:textAlignment="center"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="@+id/jkp"
        app:layout_constraintStart_toStartOf="@+id/jkp"
        app:layout_constraintTop_toBottomOf="@+id/jkp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="57dp"
        android:layout_height="12dp"
        android:text="Donate Food"
        android:textAlignment="center"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="@+id/food"
        app:layout_constraintStart_toStartOf="@+id/food"
        app:layout_constraintTop_toBottomOf="@+id/food" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="57dp"
        android:layout_height="12dp"
        android:text="Donate Clothes"
        android:textAlignment="center"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="@+id/clothes"
        app:layout_constraintStart_toStartOf="@+id/clothes"
        app:layout_constraintTop_toBottomOf="@+id/clothes" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="57dp"
        android:layout_height="12dp"
        android:text="Donate Books"
        android:textAlignment="center"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="@+id/Books"
        app:layout_constraintStart_toStartOf="@+id/Books"
        app:layout_constraintTop_toBottomOf="@+id/Books" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="57dp"
        android:layout_height="12dp"
        android:text="Donate Meds"
        android:textAlignment="center"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="@+id/Meds"
        app:layout_constraintStart_toStartOf="@+id/Meds"
        app:layout_constraintTop_toBottomOf="@+id/Meds" />

    <ImageButton
        android:id="@+id/organ"
        android:layout_width="61dp"
        android:layout_height="60dp"
        android:background="@drawable/roundbutton"
        android:contentDescription="@string/clothes"
        android:padding="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/organ_donation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.608"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.411" />

    <ImageButton
        android:id="@+id/jkp"
        android:layout_width="61dp"
        android:layout_height="60dp"
        android:background="@drawable/roundbutton"
        android:contentDescription="@string/clothes"
        android:padding="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/jk_yog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.411" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/red_heart"
        android:layout_width="60dp"
        android:layout_height="54dp"
        android:src="@drawable/red_for_encouragement"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/green_heart"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.8" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/green_heart"
        android:layout_width="95dp"
        android:layout_height="88dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/green_for_verified"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.942" />

</androidx.constraintlayout.widget.ConstraintLayout>
